--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "nunjucks": "^3.0.1",
     "pug": "^2.0.0-rc.4",
     "react": "^16.0.0",
-    "react-dom": "^16.0.0"
+    "react-dom": "^16.0.0",
+    "typescript": "^3.0.1"
   }
 }
